fix(CY-4): 쿠폰 템플릿 검증과 응답 안정성 강화