@@ -2,6 +2,8 @@
 package com.kafkick.core.coupon;
 
 import java.util.EnumSet;
+import java.util.Collections;
+import java.util.EnumSet;
 import java.util.Set;
 
 public enum MembershipGrade {
@@ -55,6 +57,6 @@ public enum MembershipGrade {
             }
         }
 
-        return Set.copyOf(grades);
+        return Collections.unmodifiableSet(grades);
     }
 }
